# openqa-log-visualizer

./: .gitignore  CONTRIBUTING.md  ISSUES.md  Makefile  README.md  config.yaml  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
app/: __init__.py  autoinst_parser.py  cache.py  client.py  main.py
app/static/css/: style.css
app/static/js/: apiClient.js  main.js  renderer.js  timelineRenderer.js
app/templates/: index.html
docs/: configuration.md  usage.md
tests/backend/: conftest.py  test_autoinst_parser.py  test_cache.py  test_client.py  test_init.py  test_main.py
tests/e2e/performance/: test_analyze.sh
tests/e2e/performance/assets/configs/: config.performance.yaml
tests/e2e/playwright/: app-loading.spec.ts
tests/frontend/ut/: apiClient.test.js  renderer.test.js  timelineRenderer.test.js
