[project]
name = "openqa-log-visualizer"
version = "0.1.0"
description = "A web-based tool to analyze and visualize logs from multiple, related openQA jobs."
requires-python = ">=3.9"
license = "GPL-2.0-only"
readme = "README.md"

dependencies = [
    "flask>=3.1.2",
    "openqa-client>=4.3.0",
    "pyyaml",
    "requests",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.12",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
